Added swipe to delete on `ShoppingCartView`, introduced local swift package for code reusability, and mocked network calls for UI tests

--- a/ShopSavvy.xcodeproj/xcshareddata/xcschemes/ShopSavvy.xcscheme
+++ b/ShopSavvy.xcodeproj/xcshareddata/xcschemes/ShopSavvy.xcscheme
@@ -49,6 +49,27 @@
                ReferencedContainer = "container:ShopSavvy.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4EB488D429F992C400096CF7"
+               BuildableName = "UITests.xctest"
+               BlueprintName = "UITests"
+               ReferencedContainer = "container:ShopSavvy.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4EB4890329FC3F8100096CF7"
+               BuildableName = "CoreTests.xctest"
+               BlueprintName = "CoreTests"
+               ReferencedContainer = "container:ShopSavvy.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
